[FIX] #59155 Prod area ej över till caset om ej aktivt i case settings

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -125,6 +125,7 @@
     @Html.HiddenFor(model => model.NewCase.Supplier_Id)
     @Html.HiddenFor(model => model.NewCase.Change_Id)
     @Html.HiddenFor(model => model.NewCase.FinishingDescription)
+    @Html.HiddenFor(model => model.NewCase.ProductArea_Id)
 
     @Html.HiddenFor(model => model.NewCase.IsAbout.ReportedBy)
     @Html.HiddenFor(model => model.NewCase.IsAbout.Person_Name)
