[FIX] #58878 Incorrect icon

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
@@ -1970,7 +1970,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <i class="dh-icon-textfield" rel="tooltip" title="@Translation.GetCoreTextTranslation("Textfält")"></i>
+                                    <i class="dh-icon-textarea" rel="tooltip" title="@Translation.GetCoreTextTranslation("Textfält - större")"></i>
                                 </td>
                                 <td>
                                     @Translation.GetCoreTextTranslation("Övrigt")
