--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -28,6 +28,8 @@
             ReportedBy: "CaseDataModel_ReportedBy",
             PersonsName: "CaseDataModel_PersonsName",
             PersonsPhone: "CaseDataModel_PersonsPhone",
+            PersonsEmail: "CaseDataModel_PersonsEmail",
+            PersonsCellphone: "CaseDataModel_PersonsCellphone",
             UserCode: "CaseDataModel_UserCode",
             RegionId: "CaseDataModel_Region_Id",
             DepartmentId: "CaseDataModel_Department_Id",
@@ -44,6 +46,7 @@
             SubStatusId: "CaseDataModel_StateSecondary_Id",
             CausingPartId: "CaseDataModel_CausingPartId",
             PlanDate: "CaseDataModel_PlanDate",
+            Place: "CaseDataModel_Place",
             WatchDate: "CaseDataModel_WatchDate",
             FinishingDate: "CaseDataModel_FinishingDate",
             ClosingReasonId: "CaseDataModel_FinishingType_Id",
@@ -68,6 +71,9 @@
             PlanDate: '@(Model.CaseDataModel.PlanDate != null ? Model.CaseDataModel.PlanDate.Value.ToString() : "" )',
             WatchDate: '@(Model.CaseDataModel.WatchDate != null ? Model.CaseDataModel.WatchDate.Value.ToString() : "" )',
             PriorityId: '@Model.CaseDataModel.Priority_Id',
+            PersonsEmail: '@Model.CaseDataModel.PersonsEmail',
+            PersonsCellphone: '@Model.CaseDataModel.PersonsCellphone',
+            Place: '@Model.CaseDataModel.Place',
         },
 
         extendedCaseGuid: '@(Model.ExtendedCaseDataModel.ExtendedCaseGuid)',
