--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_Security.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_Security.cshtml
@@ -150,6 +150,15 @@
             </td>
         </tr>
         <tr>
+            <td></td>
+            <td>
+                <input data-field="caseUnlockPermission" type="checkbox" name="User.CaseUnlockPermission" @(Model.User.CaseUnlockPermission == 1 ? "checked=checked" : "") value="1" />
+                <input type="hidden" name="User.CaseUnlockPermission" value="0" />
+                @*@Html.CheckBoxFor(x => x.User.CaseUnlockPermission)*@
+                &nbsp; &nbsp;@Translation.GetCoreTextTranslation("Användaren har rättighet till") @Translation.GetCoreTextTranslation("Lås upp ärende").ToLower()
+            </td>
+        </tr>
+        <tr>
             <td>
                 @Translation.Get("Ärendemall", Enums.TranslationSource.TextTranslation)
             </td>
@@ -330,15 +339,15 @@
             @Html.DropDownListFor(model => model.UserRights, Model.UserRoles, "", new {})
         </td>
     </tr>
-        <tr>
-            <td>
-                @Translation.GetCoreTextTranslation("Lås upp ärende")
-            </td>
-            <td>
-                @Html.CheckBoxFor(x => x.User.CaseUnlockPermission)
-                &nbsp; &nbsp;@Translation.GetCoreTextTranslation("Användaren har rättighet till") @Translation.GetCoreTextTranslation("Lås upp ärende").ToLower()
-            </td>
-        </tr>
+    @*<tr>
+        <td>
+            @Translation.GetCoreTextTranslation("Lås upp ärende")
+        </td>
+        <td>
+            @Html.CheckBoxFor(x => x.User.CaseUnlockPermission)
+            &nbsp; &nbsp;@Translation.GetCoreTextTranslation("Användaren har rättighet till") @Translation.GetCoreTextTranslation("Lås upp ärende").ToLower()
+        </td>
+    </tr>*@
     </table>
 </div>
 <script type="text/javascript">
