[UPD] SelfService ProductArea by CaseType

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -31,7 +31,8 @@
         seachComputerUrl: '@Url.Content("~/Case/SearchComputer")',
         saveNewCaseUrl: '@Url.Content("~/Case/NewCase")',
         fetchDepartmentsUrl: '@Url.Content("~/Case/GetDepartmentsByRegion")',
-        fetchOUUrl: '@Url.Content("~/Case/GetOrgUnitsByDepartments")'
+        fetchOUUrl: '@Url.Content("~/Case/GetOrgUnitsByDepartments")',
+        setProductAreaByCaseTypeUrl: '@Url.Content("~/Case/GetProductAreaByCaseType")'
     };
 
     window.parameters = {
